Finished last editing of lit study

--- a/lit_study/lit_table.tex
+++ b/lit_study/lit_table.tex
@@ -18,8 +18,8 @@
             \citet{Muthusamy2021}        & \citeyear{Muthusamy2021}        & \gls{BFBEL}                                                            & PID                                                                    & -                                                              & \ding{51}                                                                & \ding{51}                                                           &                                                                        & \ding{51}                                                         &                                                                        \\
             \citet{Allahverdy2021}       & \citeyear{Allahverdy2021}       & \gls{BISMC} with \gls{ILC}                                             & -                                                                      & non-linear                                                     & \ding{51}                                                                & \ding{51}                                                           &                                                                        &                                                                   &                                                                        \\
             \citet{Faust2014}            & \citeyear{Faust2014}            & \gls{RL} (\gls{CAFVI})                                                 & -                                                                      & -                                                              & \ding{51}                                                                & \ding{51}                                                           &                                                                        & \ding{51}                                                         &                                                                        \\
-            \citet{Wang2020}             & \citeyear{Wang2020}             & Double \gls{ADRC}                                                      & PID                                                                    & linear                                                         & \ding{51}                                                                & \ding{51}                                                           &                                                                        & \ding{51}                                                         & \ding{51}                                                              \\
-            \citet{Hua2021}              & \citeyear{Hua2021}              & \gls{RL} (non-linear)                                                   & \gls{BS}, \gls{EB}                                                     & non-linear                                                     & \ding{51}                                                                &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Wang2020}             & \citeyear{Wang2020}             & \gls{ADRC}                                                             & PID                                                                    & linear                                                         & \ding{51}                                                                & \ding{51}                                                           &                                                                        & \ding{51}                                                         & \ding{51}                                                              \\
+            \citet{Hua2021}              & \citeyear{Hua2021}              & \gls{RL} (non-linear)                                                  & \gls{BS}, \gls{EB}                                                     & non-linear                                                     & \ding{51}                                                                &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
             \citet{Taylor2020}           & \citeyear{Taylor2020}           & \gls{H-inf} loop-shaping                                               & \gls{LQR}                                                              & linear                                                         & \ding{51}                                                                &                                                                     & \ding{51}                                                              &                                                                   &                                                                        \\
             \citet{Erasmus2020}          & \citeyear{Erasmus2020}          & \gls{MRAC}                                                             & \gls{LQR}                                                              & linear                                                         & \ding{51}                                                                &                                                                     & \ding{51}                                                              & \ding{51}                                                         & \ding{51}                                                              \\
             \citet{Slabber2020}          & \citeyear{Slabber2020}          & \gls{NF} with \gls{LQR}                                                & \gls{PID}                                                              & linear                                                         & \ding{51}                                                                &                                                                     & \ding{51}                                                              &                                                                   &                                                                        \\
@@ -32,7 +32,7 @@
             \citet{Son2017}              & \citeyear{Son2017}              & \gls{MPC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
             \citet{Trachte2014}          & \citeyear{Trachte2014}          & \gls{MPC}                                                              & \gls{LQR}                                                              & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
             \citet{Trachte2015}          & \citeyear{Trachte2015}          & \gls{MPC}                                                              & \gls{LQR}                                                              & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
-            \citet{Liang2021}            & \citeyear{Liang2021}            & non-linear                                                              & \gls{LQR}, \gls{PD}                                                    & non-linear                                                     &                                                                          &                                                                     & \ding{51}                                                              & \ding{51}                                                         &                                                                        \\
+            \citet{Liang2021}            & \citeyear{Liang2021}            & Non-linear                                                              & \gls{LQR}, \gls{PD}                                                    & non-linear                                                     &                                                                          &                                                                     & \ding{51}                                                              & \ding{51}                                                         &                                                                        \\
             \citet{Zeng2019a}            & \citeyear{Zeng2019a}            & Geometric                                                              & -                                                                      & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
             \citet{Yang2018}             & \citeyear{Yang2018}             & \gls{RISE}                                                             & -                                                                      & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
             \citet{Martinez-Vasquez2020} & \citeyear{Martinez-Vasquez2020} & \gls{SMC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
@@ -45,10 +45,10 @@
         \label{tbl:lit}
     \end{table}
 
-% Add \\ to last line otherwise error.
-% Use tabularx
-% ?? Remove year column to save space
-% ?? Added acronyms full
+    \scriptsize
+    \emph{Refer to Page (\pageref{sec:abbrev}) for the abbreviations expanded into words.}
+
+% ?? Added acronyms full at the bottom
 
 \end{landscape}
 
