--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -204,6 +204,7 @@
 
 \input{frontmatter/symbols}
 \printglossary[type=\acronymtype, title={Abbreviations}, style=super]
+\label{sec:abbrev}
 
 \newpage
 \pagenumbering{arabic}
