Added photo of honeybee and table of physical parameters

--- a/control/mpc.tex
+++ b/control/mpc.tex
@@ -167,7 +167,7 @@
         It was selected because it integrates well with our simulation environment in Simulink
         and it specifically uses a discrete state-space plant model.
         The Model Predictive Control Toolbox\texttrademark~ also supports C++ code generation for stand-alone ROS nodes.
-        Therefore, it can integrate with the SITL implementation of PX4 and it can be run on a companion computer for practical implementations.
+        Therefore, it can integrate with the SITL implementation of PX4 and it can be run on an \gls{OBC} for practical implementations.
 
         % ?? Check all Simulink without TM
         
@@ -444,6 +444,7 @@
             \begin{tabularx}{0.3\linewidth}{@{}cc@{}}
                 \toprule
                 \textbf{Parameter}   & \textbf{Value} \\
+                \midrule
                     $N_p$   &  166 \\
                     $N_c$   &  116 \\ 
                     $T_s$   &  \SI{0.03}{\second}\\
