--- a/glossary.tex
+++ b/glossary.tex
@@ -64,7 +64,10 @@
 \newacronym{RAM}{RAM}{Random Access Memory}
 \newacronym{UART}{UART}{Universal Asynchronous Receiver Transmitter}
 \newacronym{FC}{FC}{Flight Controller}
+\newacronym{OBC}{OBC}{On-Board Computer}
 \newacronym{USB}{USB}{Universal Serial Bus}
+\newacronym{ESL}{ESL}{Electronic System Laboratory}
+\newacronym{PWM}{PWM}{Pulse-Width Modulation}
 
 \newacronym{ZV}{ZV}{Zero Vibration}
 \newacronym{NZV}{NZV}{Negative Zero Vibration}
