--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -157,13 +157,14 @@ Finally, the mathematical models will be verified against practical flight data 
         \begin{tabularx}{0.66\linewidth}{@{}ll@{}}
             \toprule
             \textbf{Symbol}   & \textbf{Description} \\
+            \midrule
                 $m_Q$       & Mass of multirotor \\
-                $I_{xx}$    & Mass moment of inertia about $\bm{\bar{x}}_\mathcal{B}$ \\ 
-                $I_{yy}$    & Mass moment of inertia about $\bm{\bar{y}}_\mathcal{B}$ \\ 
-                $I_{zz}$    & Mass moment of inertia about $\bm{\bar{z}}_\mathcal{B}$ \\ 
                 $d$         & Distance from \gls{CoM} to each motor\\
                 $R_N$       & Virtual yaw moment arm \\
                 $\tau$      & Motor-propeller pair time constant \\ 
+                $I_{xx}$    & Mass moment of inertia about $\bm{\bar{x}}_\mathcal{B}$ \\ 
+                $I_{yy}$    & Mass moment of inertia about $\bm{\bar{y}}_\mathcal{B}$ \\ 
+                $I_{zz}$    & Mass moment of inertia about $\bm{\bar{z}}_\mathcal{B}$ \\ 
                 $C_{Q_X}$   & Aerodynamic drag coefficient in $\bm{\bar{x}}_\mathcal{B}$ direction \\
                 $C_{Q_Y}$   & Aerodynamic drag coefficient in $\bm{\bar{x}}_\mathcal{B}$ direction \\
                 $C_{Q_Z}$   & Aerodynamic drag coefficient in $\bm{\bar{x}}_\mathcal{B}$ direction \\
