--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -40,7 +40,7 @@
         because the algorithm has been studied more, is less computationally complex and provides similar performance to \gls{HAVOKc}.
         These data-driven methods were shown to produce accurate predictions of the payload dynamics 
         with a practical length of training data, sample time and noise level.
-        This proves to be promising for practical implementation with an \gls{MPC} on a multirotor companion computer.
+        This proves to be promising for practical implementation with an \gls{MPC} on a multirotor \gls{OBC}.
         The data-driven methods also proved to provide accurate prediction with a range of different payload parameters
         and even with payloads that act as a double pendulum.
         In contrast, the considered white-box system identification technique 
