--- a/glossary.tex
+++ b/glossary.tex
@@ -68,6 +68,7 @@
 \newacronym{USB}{USB}{Universal Serial Bus}
 \newacronym{ESL}{ESL}{Electronic System Laboratory}
 \newacronym{PWM}{PWM}{Pulse-Width Modulation}
+\newacronym{RC}{RC}{Radio Control}
 
 \newacronym{ZV}{ZV}{Zero Vibration}
 \newacronym{NZV}{NZV}{Negative Zero Vibration}
